from enum import Enum

class ActivityType(Enum):
    UNKNOWN = 'unknown'
    SITUPS = 'situps'
    SQUATS = 'squats'
    PUSHUPS = 'pushups'
    STAR_JUMPS = 'star_jumps'
