@startuml ActivityData
title Activity Data
skinparam Linetype ortho

package Luxon {
  class DateTime <<external>>
  class Interval <<external>>

  Interval o-left-> "2" DateTime
}

enum ActivityType {
  UNKNOWN
  ==
  SITUPS
  SQUATS
  PUSHUPS
  STAR_JUMPS
}

class ActivityTracking{
  meta: ActivityTrackingMeta
  accelerometer: SensorAsyncSample[]
  gyroscope: SensorAsyncSample[]
  magnetometer: SensorAsyncSample[]
}

class ActivityTrackingMeta{
  type: ActivityType
  interval: Interval
  repeats: number
}


class SensorAsyncSample {
  timestamp: DateTime
  data: AxesData
}

class AxesData {
  x: number
  y: number
  z: number
}

class SensorForcedSample {
  altitude?: number
  pressure?: number
  temperature?: number
  illuminance?: number
}

ActivityTrackingMeta --> ActivityType
SensorAsyncSample *--> DateTime
ActivityTrackingMeta *--> Interval
ActivityTracking "1..*" *-->  SensorAsyncSample
ActivityTracking "1" *-->  ActivityTrackingMeta

SensorAsyncSample *--> AxesData
@enduml
